--- a/client/src/css/startbanner.css
+++ b/client/src/css/startbanner.css
@@ -18,15 +18,37 @@
     width:200px;
     /* display: inline-block; */
 }
+.item-online {
+    width: 225px;
+    height: 250px;
+}
+.item-name{
+    width: 255px;
+    height: 50px;
+    font-size: 20px;
+}
 
 @media (max-width: 768px) {
     .container-main{
         padding-top: 50px;
     }
     .container{
-        width: 200px;
+        width: 360px;
     }
     .container>.item{
-        width: 200px;
+        width: 100px;
+        margin-bottom: -5px;
+    }
+    .item-online{
+        width: 110px;
+        height: 115px;
+    }
+    .item-name{
+        width: 65.5px;
+        height: 12.4px;
+        font-size: 9px;
+    }
+    .item-name-online{
+        margin-left: 15px;
     }
 }
